SERVER-21726 do not log no-op updates in all cases, not just for inplace-supported storage engines